--- a/style.css
+++ b/style.css
@@ -1,14 +1,34 @@
 .head{
 	text-align: center;
-	margin: auto;
-
 }
 
 .list{
-	margin: 150px;
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
 	width: 400px;
 	border: 2px solid black;
+	list-style: none;
+
+}
+.input{
+	margin: auto;
+
 }
 .add-btn{
-	display: inline;
+	margin: auto;
 }
+.form-func{
+	border: 2px solid black;
+	width: 300px;
+	display: block;
+	margin: auto;
+	padding: 20px;
+}
+p{
+	text-align: center;
+}
+.removed{
+	text-decoration: line-through;
+}
+
