Instructions and Clear Input
Added instructions for the app and added and automatic clear once a item
is a added to the list after button click.

--- a/style.css
+++ b/style.css
@@ -28,7 +28,9 @@
 p{
 	text-align: center;
 }
-.removed{
-	text-decoration: line-through;
+.instruct{
+	list-style: none;
+	text-align: center;
 }
+
 
